--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@geolonia/japanese-numeral": "^1.0.2",
     "@tailwindcss/vite": "^4.1.17",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
