--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "google-tts-api": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17",
